# kiwiGPT

./: .editorconfig  .gitignore  .justfile  .pre-commit-config.yaml  README.md  kiwiGPT.ipynb  makemore.ipynb  pyproject.toml  ruff.toml  shell.nix
