[project]
name = "kiwigpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.4",
    "plotly>=6.2.0",
    "torch>=2.7.1",
    "jax[cuda13]>=0.8.0",
    "triton>=3.3.1",
]
