[project]
name = "kiwigpt"
version = "0.1.0"
description = "A template for developing production-ready Python applications."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.4",
    "plotly>=6.2.0",
    "torch>=2.7.1",
    "jax[cuda13]>=0.8.0",
    "triton>=3.3.1",
]


[dependency-groups]
dev = [
  "pre-commit>=4.1.0",
  "ipykernel>=6.29.5",
]
