[project]
name = "kiwigpt"
version = "0.1.0"
description = "A template for developing production-ready Python applications."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
  "jupyter>=1.1.1",
  "matplotlib>=3.10.5",
  "notebook>=7.4.4",
  "plotly>=6.2.0",
  "torch>=2.7.1",
  "jax[cuda13]>=0.8.0",
  "triton>=3.3.1",
  "tiktoken>=0.12.0",
  "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = ["ipykernel", "ipywidgets", "pre-commit"]

[tool.uv]
environments = ["sys_platform == 'linux' or sys_platform == 'win32'"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
triton = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
